...
            PlusView().tabItem{
                Image(systemName: "plus.circle.fill")
                    .resizable()
                    .aspectRatio(contentMode: .fit)
//                    .frame(width: geometry.size.width/7-6, height: geometry.size.height/7-6)
                    .foregroundColor(Color("AccentColor"))
                Text("Plus")
//                GeometryReader { geometry in
//                    ZStack{
//                        Circle()
//                                .foregroundColor(.white)
//                                .frame(width: geometry.size.width/7, height: geometry.size.width/7)
//                                .shadow(radius: 4)
...
